[tool.poetry]
name = "mural-api"
version = "0.1.0"
description = ""
authors = ["Gustavo Sabino <gustavo.sabino@olist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.36"}
python-dotenv = "^0.20.0"
fastapi-users = {extras = ["sqlalchemy"], version="10.0.3"}
aiosqlite = "^0.17.0"
asyncpg = "^0.25.0"
fastapi-users-db-sqlalchemy = "4.0.3"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
